# fmap-alignment-probing

./: .gitignore  README.md  proposal.md  pyproject.toml
docs/: RELATED_WORK.md  exp3_mvp.md  proposal.md
mvp/: export_viz.py  phase0.py  phase0_adv.py  phase0_diag.py
viz/: data.js  index.html
